fixed spacing with banner icon

--- a/style.css
+++ b/style.css
@@ -131,6 +131,11 @@ button.button-danger {
     margin-top: 2rem;
 }
 
+.banner-text-container{
+    margin-left: 6px ;
+}
+
 .banner-text-container p:nth-of-type(2){
      margin-top: 2px;
+
 }
